--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -1,63 +1,76 @@
 <html>
 
 <head>
-    <title>webpack library example - Transalating numbers</title>
-    <script type='text/javascript' src='https://unpkg.com/lodash@4.16.6'></script>
-    <script src="http://vuejs.org/js/vue.min.js"></script>
+  <title>webpack library example - Transalating numbers</title>
+  <script type='text/javascript' src='https://unpkg.com/lodash@4.16.6'></script>
+  <script src="http://vuejs.org/js/vue.min.js"></script>
 </head>
-
 <body>
-    <div id='root'>
-        <h2>测试信息</h2>
-        <p><span>版本: </span><span>{{version}}</span></p>
-        <p>是否支持: {{supported}}</p>
-        <p>其余信息处参考console</p>
-    </div>
-    <script type='text/javascript' src='./vm-storage.min.js'></script>
-    <script type='text/javascript'>
+  <div id='root'>
+    <h2>测试信息</h2>
+    <p>其余信息处参考console</p>
+  </div>
+  <script type='text/javascript' src='./vm-geo.min.js'></script>
+  <script type='text/javascript'>
+    let vm = Vue.prototype
+    Vue.use(vmGeo, {
+      enableHighAccuracy: true, // 是否要求高精度地理位置信息
+      maximumAge: 10000,         // 设置缓存时间为1s，1s后重新获取地理位置信息
+      timeout: 15000,            // 5s未返回信息则返回错误
+      fallBack: 'aMap',         // 条件允许优先使用原生获取, 如果在IOS下是使用的是HTTP获取, 则使用备选, 这里是aMap
+      qMap: {
+        key: 'OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77', // official example app key, please use geo.register() to replace
+        name: 'qqMapName'
+      },
+      bMap: {
+        key: 'yFKaMEQnAYc1hA0AKaNyHGd4HTQgTNvO'
+      },
+      aMap: {
+        key: '8d1ba642a3a3046d1ee087e0f8b490a2'
+      }
+    })
+    vm.$geo.getCurrentPosition('qMap').then(function (data) {
+      console.log('qMap 返回数据:')
+      console.log(data)
+    }, function (err) {
+      console.error('qMap err返回数据:')
+      console.error(err)
+    })
 
-        console.log(vmStorage)
-        console.log(vmStorage.version)
-        let vm = Vue.prototype
-        console.log(vm.$localStorage.set('hello', { a: 1 }))
-        console.log(vm.$localStorage.get('hello'))
+    vm.$geo.getCurrentPosition('aMap').then(function (data) {
+      console.log('aMap 返回数据:')
+      console.log(data)
+    }, function (err) {
+      console.error('aMap err返回数据:')
+      console.error(err)
+    })
 
-        var array = [1, 2, 3, 4, 5]
-        var object = {
-          a: 1,
-          b: 2
-        }
-        vm.$localStorage.set('array', array)
-        vm.$localStorage.set('array-string', JSON.stringify(array))
-        vm.$localStorage.set('object', object)
-        vm.$localStorage.set('object-string', JSON.stringify(object))
+    vm.$geo.getCurrentPosition('bMap').then(function (data) {
+      console.log('bMap 返回数据:')
+      console.log(data)
+    }, function (err) {
+      console.error('bMap err返回数据:')
+      console.error(err)
+    })
 
-        console.log(`测试1: vm.$localStorage.get('array')`)
-        console.log(vm.$localStorage.get('array'))
-        console.log(JSON.stringify(vm.$localStorage.get('array')) === JSON.stringify(array))
+    vm.$geo.getCurrentPosition('h5').then(function (data) {
+      console.log('h5 返回数据:')
+      console.log(data)
+    }, function (err) {
+      console.error('h5 err返回数据:')
+      console.error(err)
+    })
 
-        console.log(`测试2: vm.$localStorage.get('object')`)
-        console.log(vm.$localStorage.get('object'))
-        console.log(JSON.stringify(vm.$localStorage.get('object')) === JSON.stringify(object))
-        
-        console.log(`测试3: vm.$localStorage.remove('object')`)
-        console.log(vm.$localStorage.remove('object'))
-        console.log(vm.$localStorage.get('object'))
-        console.log(JSON.stringify(vm.$localStorage.get('object')) === JSON.stringify(object))
-
-        console.log(vm.$localStorage)
-        var vm2 = new Vue({
-          el: '#root',
-          data: function () {
-            return {
-              version: vmStorage.version,
-              supported: this.$localStorage.supported()
-            }
-          }
-        })
+    // var vm2 = new Vue({
+    //   el: '#root',
+    //   data: function () {
+    //     return {
+    //     }
+    //   }
+    // })
 
     // document.getElementById('root').innerHTML = " This is a browser example where and api is called to transalate 'One' to '1' \n Results: wordtonum('One') === " + webpackNumbers.wordtonum('One')
-    </script>
+  </script>
 </body>
 
 </html>
